--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "ui-regression": "cypress run --browser chrome --spec cypress/e2e/1-getting-started/**.js",
     "ui-regression-allure": "cypress run --browser chrome --spec cypress/e2e/1-getting-started/**.js --env allure=true",
-    "allure:clear": "rm -r allure-results/ allure-report cypress/screenshots || true",
+    "allure:clear": "rm -r allure-results/123/ allure-report cypress/screenshots || true",
     "allure:report": "allure generate allure-results --clean -o allure-report",
     "allure:history": "mv -f allure-report/history allure-results/history && rm -r allure-report || true"
   },
@@ -14,7 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "@shelex/cypress-allure-plugin": "^2.33.0",
-    "cypress": "^10.9.0",
+    "cypress": "^13.3.0",
     "cypress-mochawesome-reporter": "^3.2.3"
   }
 }
